# langchain_supervisor_as_tool_calling

./: .gitignore  README.md  main.py  pyproject.toml
langchain_openai_voice/: __init__.py
