[project]
name = "langchain-supervisor-as-tool-calling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.29",
    "langdetect>=1.0.9",
    "langgraph-supervisor>=0.0.29",
    "starlette>=0.47.2",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
